--- a/lib/generators/clavis/templates/migration.rb.tt
+++ b/lib/generators/clavis/templates/migration.rb.tt
@@ -1,7 +1,7 @@
-class CreateClavisOauthIdentities < ActiveRecord::Migration<%= migration_version %>
+class CreateClavisOauthIdentities < ActiveRecord::Migration[<%= migration_version %>]
   def change
     create_table :clavis_oauth_identities do |t|
-      t.references :user, polymorphic: true, null: false, index: true
+      t.references :authenticatable, polymorphic: true, null: false, index: true
       t.string :provider, null: false
       t.string :uid, null: false
       t.json :auth_data
@@ -13,4 +13,4 @@ class CreateClavisOauthIdentities < ActiveRecord::Migration<%= migration_version
       t.index [:provider, :uid], unique: true
     end
   end
-end 
+end
